--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "cssnano": "^4.1.10"
+  },
+
+  "scripts": {
+    "dev": "parcel index.html",
+    "build": "parce build index.html"
   }
 }
