--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
 
   "scripts": {
     "dev": "parcel index.html",
-    "build": "parce build index.html"
+    "build": "parcel build index.html"
   }
 }
